--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -1,5 +1,6 @@
 %h1 Codeship Foosball
 
+%h2 Players
 %ol
   - @players.each do |player|
     %li
@@ -7,7 +8,6 @@
 
 = form_tag Match.new do
   %h2 Team Home
-
   = label :forward_home, 'Forward'
   = select :forward_home, :player_id, @players.collect {|p| [ p.name, p.id ] }
   = label :defense_home, 'Defense'
@@ -19,7 +19,7 @@
   = label :defense_away, 'Defense'
   = select :defense_away, :player_id, @players.collect {|p| [ p.name, p.id ] }
 
-  = submit_tag "Play!"
+  = submit_tag "Play!", class: "btn btn-primary"
 
 %h2 Matches
 
