--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,12 @@
 
   %body
 
-    = yield
+  %nav{class: "navbar navbar-default",  role: "navigation"}
+    %div.navbar-header
+      %a.navbar-brand Codeship Foosball
+    %div{class: "collapse navbar-collapse"}
+      %ul{class: "nav navbar-nav"}
+        %li= link_to "new Match", new_match_path
+        %li= link_to "Matches", matches_path
+        %li= link_to "Rankings", rankings_path
+  %div.container= yield
