--- a/app/views/matches/edit.html.haml
+++ b/app/views/matches/edit.html.haml
@@ -1,22 +1,18 @@
-%h1 Match
-%h2 Team Home
-%h3 Forward
-= @match.home_team.forward_player.name
-%h3 Defense
-= @match.home_team.defense_player.name
+%table.table
+  %tr
+    %th Home Team
+    %th :
+    %th Away Team
+  - [@match].each do |match|
+    %tr
+      %td= match.home_team.name
+      %td= [match.home_team_score, match.away_team_score].join ":"
+      %td= match.away_team.name
 
-%h2 Team Away
-%h3 Forward
-= @match.away_team.forward_player.name
-%h3 Defense
-= @match.away_team.defense_player.name
+  %tr
+    = form_tag @match, method: :put do |f|
+      %td= text_field(:match, :home_team_score)
+      %td
+      %td= text_field(:match, :away_team_score)
 
-%h2 Score
-= form_tag @match, method: :put do |f|
-  = label :home_team_score, 'Home Team Score:'
-  = text_field(:match, :home_team_score)
-  = label :away_team_score, 'Away Team Score:'
-  = text_field(:match, :away_team_score)
-
-  = submit_tag "Finish"
-
+= submit_tag "save"
