--- a/app/views/rankings/index.html.haml
+++ b/app/views/rankings/index.html.haml
@@ -1,14 +1,17 @@
 %h2 Rankings
 
-%table.table
-  %tr
-    %th Name
-    %th Points
-    %th Goals
-    %th Goals C
+%table{class:"table table-striped"}
+  %thead
+    %tr
+      %th Name
+      %th Games
+      %th Points
+      %th Goals
+      %th Goals C
   - @teams.each do |team|
     %tr
       %td= team.name
+      %td= team.matches.count
       %td= team.points
       %td= team.goals
       %td= team.goals_conceded
