--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,14 +4,19 @@
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
-    %meta{name:"viewport",content:"width=device-width"}
+    %meta{name:"viewport",content:"width=device-width, initial-scale=1.0"}
 
   %body
 
   %nav{class: "navbar navbar-default",  role: "navigation"}
     %div.navbar-header
+      %button{type: "button", class: "navbar-toggle", :data => {:toggle => "collapse", :target => "#navbar-collapse-1"}}
+        %span.sr-only= "Toggle navigation"
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
       %a.navbar-brand Codeship Foosball
-    %div{class: "collapse navbar-collapse"}
+    %div{class: "collapse navbar-collapse", id:"navbar-collapse-1"}
       %ul{class: "nav navbar-nav"}
         %li= link_to "new Match", new_match_path
         %li= link_to "Matches", matches_path
